fix(feedback): more visual and design improvements on mobile

--- a/src/sass/views/feedback/rateApp.scss
+++ b/src/sass/views/feedback/rateApp.scss
@@ -4,6 +4,9 @@
     margin-top: 15px;
     color: #667;
   }
+  .skip-rating {
+    margin-right: 15px;
+  }
   .icon-svg > img {
     width: 80px;
     height: 80px;
@@ -13,7 +16,7 @@
     font-size: 20px;
     font-weight: bold;
     color: $dark-gray;
-    margin: 40px 50px 10px;
+    margin: 80px 50px 10px;
     text-align: center;
   }
   .subtitle {
@@ -25,9 +28,6 @@
     width: 100%;
     position: absolute;
     background-color: $subtle-gray;
-    .button {
-      margin-top: 40px;
-      margin-bottom: 30px;
-    }
+    padding: 50px 0;
   }
 }
